--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-06-10 Sat 19:00 -->
+<!-- 2023-06-10 Sat 19:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Blockchain Basic</title>
@@ -24,67 +24,42 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1290f6a">1. Program State</a></li>
-<li><a href="#org79ef8f9">2. Overview Networks</a></li>
-<li><a href="#orga35fae9">3. DApp Architecture</a></li>
-<li><a href="#org243fb74">4. Byzantine General's Problem</a>
+<li><a href="#orga8e1b28">1. Program State</a></li>
+<li><a href="#orgfbec7c7">2. Overview Networks</a></li>
+<li><a href="#orgef7a075">3. DApp Architecture</a></li>
+<li><a href="#org37ba722">4. Byzantine General's Problem</a></li>
+<li><a href="#orgdb92812">5. Transaction flow</a></li>
+<li><a href="#org05dcee8">6. Consensus</a></li>
+<li><a href="#org70b7bc7">7. Requirements of Blockchain?</a></li>
+<li><a href="#orgfe836ad">8. Types of Blockchain</a></li>
+<li><a href="#orgc03dfce">9. What is Blockchain</a></li>
+<li><a href="#org61386fb">10. Components of Blockchain</a></li>
+<li><a href="#orgf5332c7">11. Decentralized Features</a></li>
+<li><a href="#org63f384c">12. Example</a>
 <ul>
-<li><a href="#org1d16ce4">4.1. Image 01</a></li>
-<li><a href="#org885f1d0">4.2. Image 02</a></li>
-<li><a href="#orgad5f645">4.3. Practical Byzantine Fault Tolerance</a></li>
+<li><a href="#org5774a4f">12.1. Install</a></li>
 </ul>
 </li>
-<li><a href="#org949e06c">5. Transaction flow</a></li>
-<li><a href="#orgfa1cdb0">6. Consensus</a>
-<ul>
-<li><a href="#orgeb04c3e">6.1. Proof of Work</a></li>
-<li><a href="#orgb7e2d86">6.2. Proof of Stake</a></li>
-</ul>
-</li>
-<li><a href="#org00bf330">7. Requirements of Blockchain?</a></li>
-<li><a href="#org3cb44e2">8. Types of Blockchain</a></li>
-<li><a href="#orgd1932c4">9. What is Blockchain</a></li>
-<li><a href="#orgf9176bd">10. Components of Blockchain</a>
-<ul>
-<li><a href="#org09195de">10.1. Data Models</a></li>
-<li><a href="#org3297e84">10.2. Decentralized Models</a></li>
-<li><a href="#orgc629b2a">10.3. Network Models</a></li>
-<li><a href="#org4312fc1">10.4. <code>Consensus</code></a></li>
-<li><a href="#org77836d8">10.5. Cryptographic schemes</a></li>
-</ul>
-</li>
-<li><a href="#orgcfe6e89">11. Decentralized Features</a>
-<ul>
-<li><a href="#org7c2a795">11.1. Level of Decentralization</a></li>
-<li><a href="#orga71e2ff">11.2. Security</a></li>
-<li><a href="#org2fa6c43">11.3. Performance</a></li>
-</ul>
-</li>
-<li><a href="#orgdfcc481">12. Example</a>
-<ul>
-<li><a href="#org636bd15">12.1. Install</a></li>
-</ul>
-</li>
-<li><a href="#orgc6c5dd9">13. Cons</a></li>
+<li><a href="#org1b6d471">13. Cons</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org1290f6a" class="outline-2">
-<h2 id="org1290f6a"><span class="section-number-2">1.</span> Program State</h2>
+<div id="outline-container-orga8e1b28" class="outline-2">
+<h2 id="orga8e1b28"><span class="section-number-2">1.</span> Program State</h2>
 <div class="outline-text-2" id="text-1">
 
-<div id="orgffd8b92" class="figure">
+<div id="orga62c5df" class="figure">
 <p><img src="./images/program-state.png" alt="program-state.png" />
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org79ef8f9" class="outline-2">
-<h2 id="org79ef8f9"><span class="section-number-2">2.</span> Overview Networks</h2>
+<div id="outline-container-orgfbec7c7" class="outline-2">
+<h2 id="orgfbec7c7"><span class="section-number-2">2.</span> Overview Networks</h2>
 <div class="outline-text-2" id="text-2">
 
-<div id="orgfc83ea0" class="figure">
+<div id="org8d07ff2" class="figure">
 <p><img src="./images/networks.png" alt="networks.png" />
 </p>
 </div>
@@ -93,89 +68,53 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orga35fae9" class="outline-2">
-<h2 id="orga35fae9"><span class="section-number-2">3.</span> DApp Architecture</h2>
+<div id="outline-container-orgef7a075" class="outline-2">
+<h2 id="orgef7a075"><span class="section-number-2">3.</span> DApp Architecture</h2>
 <div class="outline-text-2" id="text-3">
 
-<div id="org21df338" class="figure">
+<div id="org55f0bb3" class="figure">
 <p><img src="./images/blockchain-step.png" alt="blockchain-step.png" />
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org243fb74" class="outline-2">
-<h2 id="org243fb74"><span class="section-number-2">4.</span> <a href="https://www.youtube.com/watch?v=dfsRQyYXOsQ">Byzantine General's Problem</a></h2>
+<div id="outline-container-org37ba722" class="outline-2">
+<h2 id="org37ba722"><span class="section-number-2">4.</span> <a href="https://www.youtube.com/watch?v=dfsRQyYXOsQ">Byzantine General's Problem</a></h2>
 <div class="outline-text-2" id="text-4">
-</div>
-<div id="outline-container-org1d16ce4" class="outline-3">
-<h3 id="org1d16ce4"><span class="section-number-3">4.1.</span> Image 01</h3>
-<div class="outline-text-3" id="text-4-1">
-
-<div id="org395f42a" class="figure">
-<p><img src="./images/bft-0.png" alt="bft-0.png" />
-</p>
-</div>
-</div>
-</div>
-<div id="outline-container-org885f1d0" class="outline-3">
-<h3 id="org885f1d0"><span class="section-number-3">4.2.</span> Image 02</h3>
-<div class="outline-text-3" id="text-4-2">
-
-<div id="orgcb493d3" class="figure">
-<p><img src="./images/bft-1.png" alt="bft-1.png" />
-</p>
+<ul class="org-ul">
+<li>Image 01
+<img src="./images/bft-0.png" alt="bft-0.png" /></li>
+<li>Image 02
+<img src="./images/bft-1.png" alt="bft-1.png" /></li>
+<li>Practical Byzantine Fault Tolerance
+<img src="./images/pbft-1.png" alt="pbft-1.png" /></li>
+</ul>
 </div>
 </div>
-</div>
-<div id="outline-container-orgad5f645" class="outline-3">
-<h3 id="orgad5f645"><span class="section-number-3">4.3.</span> Practical Byzantine Fault Tolerance</h3>
-<div class="outline-text-3" id="text-4-3">
-
-<div id="org3a3bbfa" class="figure">
-<p><img src="./images/pbft-1.png" alt="pbft-1.png" />
-</p>
-</div>
-</div>
-</div>
-</div>
-<div id="outline-container-org949e06c" class="outline-2">
-<h2 id="org949e06c"><span class="section-number-2">5.</span> Transaction flow</h2>
+<div id="outline-container-orgdb92812" class="outline-2">
+<h2 id="orgdb92812"><span class="section-number-2">5.</span> Transaction flow</h2>
 <div class="outline-text-2" id="text-5">
 
-<div id="org5edd9d0" class="figure">
+<div id="org7511210" class="figure">
 <p><img src="./images/transaction.png" alt="transaction.png" />
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-orgfa1cdb0" class="outline-2">
-<h2 id="orgfa1cdb0"><span class="section-number-2">6.</span> <a href="https://www.youtube.com/watch?v=3AJ3lcm15cY">Consensus</a></h2>
+<div id="outline-container-org05dcee8" class="outline-2">
+<h2 id="org05dcee8"><span class="section-number-2">6.</span> <a href="https://www.youtube.com/watch?v=3AJ3lcm15cY">Consensus</a></h2>
 <div class="outline-text-2" id="text-6">
-</div>
-<div id="outline-container-orgeb04c3e" class="outline-3">
-<h3 id="orgeb04c3e"><span class="section-number-3">6.1.</span> Proof of Work</h3>
-<div class="outline-text-3" id="text-6-1">
-
-<div id="org5e1cd11" class="figure">
-<p><img src="./images/pow.png" alt="pow.png" />
-</p>
-</div>
-</div>
-</div>
-<div id="outline-container-orgb7e2d86" class="outline-3">
-<h3 id="orgb7e2d86"><span class="section-number-3">6.2.</span> Proof of Stake</h3>
-<div class="outline-text-3" id="text-6-2">
-
-<div id="org94efc7a" class="figure">
-<p><img src="./images/pos.png" alt="pos.png" />
-</p>
-</div>
-</div>
+<ul class="org-ul">
+<li>Proof of Work
+<img src="./images/pow.png" alt="pow.png" /></li>
+<li>Proof of Stake
+<img src="./images/pos.png" alt="pos.png" /></li>
+</ul>
 </div>
 </div>
 
-<div id="outline-container-org00bf330" class="outline-2">
-<h2 id="org00bf330"><span class="section-number-2">7.</span> Requirements of Blockchain?</h2>
+<div id="outline-container-org70b7bc7" class="outline-2">
+<h2 id="org70b7bc7"><span class="section-number-2">7.</span> Requirements of Blockchain?</h2>
 <div class="outline-text-2" id="text-7">
 <ul class="org-ul">
 <li>High Availability</li>
@@ -190,8 +129,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3cb44e2" class="outline-2">
-<h2 id="org3cb44e2"><span class="section-number-2">8.</span> Types of Blockchain</h2>
+<div id="outline-container-orgfe836ad" class="outline-2">
+<h2 id="orgfe836ad"><span class="section-number-2">8.</span> Types of Blockchain</h2>
 <div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li>Permissionless Blockchain - Public Blockchain
@@ -216,8 +155,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgd1932c4" class="outline-2">
-<h2 id="orgd1932c4"><span class="section-number-2">9.</span> What is Blockchain</h2>
+<div id="outline-container-orgc03dfce" class="outline-2">
+<h2 id="orgc03dfce"><span class="section-number-2">9.</span> What is Blockchain</h2>
 <div class="outline-text-2" id="text-9">
 <ul class="org-ul">
 <li>It can be thought of as <code>ONE BIG COMPUTER</code> made up of small computers around the world.</li>
@@ -227,43 +166,29 @@
 </div>
 </div>
 
-<div id="outline-container-orgf9176bd" class="outline-2">
-<h2 id="orgf9176bd"><span class="section-number-2">10.</span> Components of Blockchain</h2>
+<div id="outline-container-org61386fb" class="outline-2">
+<h2 id="org61386fb"><span class="section-number-2">10.</span> Components of Blockchain</h2>
 <div class="outline-text-2" id="text-10">
-</div>
-<div id="outline-container-org09195de" class="outline-3">
-<h3 id="org09195de"><span class="section-number-3">10.1.</span> Data Models</h3>
-<div class="outline-text-3" id="text-10-1">
+<ul class="org-ul">
+<li>Data Models
 <ul class="org-ul">
 <li>State Models</li>
 <li>Account Models</li>
 <li>Object Models</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org3297e84" class="outline-3">
-<h3 id="org3297e84"><span class="section-number-3">10.2.</span> Decentralized Models</h3>
-<div class="outline-text-3" id="text-10-2">
+</ul></li>
+<li>Decentralized Models
 <ul class="org-ul">
 <li>Permissionless Blockchain</li>
 <li>Permissioned Blockchain</li>
 <li>Consortium Blockchain</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-orgc629b2a" class="outline-3">
-<h3 id="orgc629b2a"><span class="section-number-3">10.3.</span> Network Models</h3>
-<div class="outline-text-3" id="text-10-3">
+</ul></li>
+<li>Network Models
 <ul class="org-ul">
 <li>Asynchronous</li>
 <li>Synchronous</li>
 <li>Partial Synchronous</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org4312fc1" class="outline-3">
-<h3 id="org4312fc1"><span class="section-number-3">10.4.</span> <code>Consensus</code></h3>
-<div class="outline-text-3" id="text-10-4">
+</ul></li>
+<li><code>Consensus</code>
 <ul class="org-ul">
 <li>PoW/PoS/DPoS</li>
 <li>Tendermint BFT</li>
@@ -274,29 +199,23 @@
 <li>AptosBFT</li>
 <li>Nominated BFT (GRANDPA &amp; BABE)</li>
 <li>&#x2026;etc</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org77836d8" class="outline-3">
-<h3 id="org77836d8"><span class="section-number-3">10.5.</span> Cryptographic schemes</h3>
-<div class="outline-text-3" id="text-10-5">
+</ul></li>
+<li>Cryptographic schemes
 <ul class="org-ul">
 <li>Hashing</li>
 <li>Signature</li>
 <li>Merkle Tree</li>
 <li>Pub/Priv Key</li>
 <li>Zero-Knowledge Proofs</li>
+</ul></li>
 </ul>
 </div>
 </div>
-</div>
-<div id="outline-container-orgcfe6e89" class="outline-2">
-<h2 id="orgcfe6e89"><span class="section-number-2">11.</span> Decentralized Features</h2>
+<div id="outline-container-orgf5332c7" class="outline-2">
+<h2 id="orgf5332c7"><span class="section-number-2">11.</span> Decentralized Features</h2>
 <div class="outline-text-2" id="text-11">
-</div>
-<div id="outline-container-org7c2a795" class="outline-3">
-<h3 id="org7c2a795"><span class="section-number-3">11.1.</span> Level of Decentralization</h3>
-<div class="outline-text-3" id="text-11-1">
+<ul class="org-ul">
+<li>Level of Decentralization
 <ul class="org-ul">
 <li>Trilemma
 <ul class="org-ul">
@@ -304,37 +223,28 @@
 <li>Decentralized</li>
 <li>Speed</li>
 </ul></li>
-</ul>
-</div>
-</div>
-<div id="outline-container-orga71e2ff" class="outline-3">
-<h3 id="orga71e2ff"><span class="section-number-3">11.2.</span> Security</h3>
-<div class="outline-text-3" id="text-11-2">
+</ul></li>
+<li>Security
 <ul class="org-ul">
 <li>Single Failure Tolerance <b>(Consensus)</b></li>
 <li>Availability</li>
 <li>Sybil Attacks</li>
 <li>51% Attacks</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org2fa6c43" class="outline-3">
-<h3 id="org2fa6c43"><span class="section-number-3">11.3.</span> Performance</h3>
-<div class="outline-text-3" id="text-11-3">
+</ul></li>
+<li>Performance
 <ul class="org-ul">
 <li>Communicate - Broadcast Data</li>
 <li>Argreement among Participants</li>
+</ul></li>
 </ul>
 </div>
 </div>
-</div>
-
-<div id="outline-container-orgdfcc481" class="outline-2">
-<h2 id="orgdfcc481"><span class="section-number-2">12.</span> Example</h2>
+<div id="outline-container-org63f384c" class="outline-2">
+<h2 id="org63f384c"><span class="section-number-2">12.</span> Example</h2>
 <div class="outline-text-2" id="text-12">
 </div>
-<div id="outline-container-org636bd15" class="outline-3">
-<h3 id="org636bd15"><span class="section-number-3">12.1.</span> Install</h3>
+<div id="outline-container-org5774a4f" class="outline-3">
+<h3 id="org5774a4f"><span class="section-number-3">12.1.</span> Install</h3>
 <div class="outline-text-3" id="text-12-1">
 <ul class="org-ul">
 <li><a href="https://pureinfotech.com/install-windows-subsystem-linux-2-windows-10/">Install WSL if use Window</a></li>
@@ -358,8 +268,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc6c5dd9" class="outline-2">
-<h2 id="orgc6c5dd9"><span class="section-number-2">13.</span> Cons</h2>
+<div id="outline-container-org1b6d471" class="outline-2">
+<h2 id="org1b6d471"><span class="section-number-2">13.</span> Cons</h2>
 <div class="outline-text-2" id="text-13">
 <ul class="org-ul">
 <li>Very Slow</li>
@@ -371,7 +281,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Dang Quang Vu</p>
-<p class="date">Created: 2023-06-10 Sat 19:00</p>
+<p class="date">Created: 2023-06-10 Sat 19:05</p>
 </div>
 </body>
 </html>
